# librb

./: .destdir  .gitignore  .install_dir  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.am.coverage  configure.ac  gc.cfg  gen-download-page.sh  man2html.sh  mtest.h  rb.c  rb.h  rb.h.in  readme.md  readme.rst  test-compilation-options  test-compilation.sh  test.c  tests.c  valid.h  version.h
.github/workflows/: ci.yml
examples/: Makefile.am  common.c  common.h  event-loop.c  no-dynamic-allocations.c  posix-network-parser.c  prod-cons-threads.c  rb.c  scatter-gather.c  simple-read-write.c
include/: Makefile.am  rb.h
man/: Makefile.am  rb_array_size.3  rb_cleanup.3  rb_clear.3  rb_count.3  rb_destroy.3  rb_discard.3  rb_header_size.3  rb_init.3  rb_new.3  rb_overview.7  rb_peek_size.3  rb_posix_read.3  rb_posix_recv.3  rb_posix_send.3  rb_posix_write.3  rb_read.3  rb_read_claim.3  rb_read_commit.3  rb_read_commit_claim.3  rb_readv.3  rb_recv.3  rb_recv_claim.3  rb_recv_commit.3  rb_recv_commit_claim.3  rb_recvv.3  rb_send.3  rb_send_claim.3  rb_send_commit.3  rb_send_commit_claim.3  rb_sendv.3  rb_set_hard_max_count.3  rb_space.3  rb_stop.3  rb_version.3  rb_write.3  rb_write_claim.3  rb_write_commit.3  rb_write_commit_claim.3  rb_writev.3
man/man3/: rb_clear.3  rb_destroy.3  rb_new.3  rb_read.3  rb_space.3  rb_stop.3  rb_version.3  rb_write.3
man/man7/: rb_overview.7
pkg/: test.c
pkg/deb/: control.template  copyright  create-pkg.sh
pkg/debian/: changelog.template  copyright  create-pkg.sh  librb-dev.install  rules
pkg/gentoo/: Manifest  librb-1.0.0.ebuild  metadata.xml
pkg/rpm/: create-pkg.sh  librb.spec.template
pkg/tgz/: create-pkg.sh
rb/: Makefile.am  mtest.h  rb.c  test.c  tests.c  valid.h
www/: Makefile.am  conf.py  custom.css  gen-download-page.sh  header.in  index.in  index.rst  rb_overview.7.rst
www/in/: footer.in  gen-reflist.sh  rb_cleanup.in  rb_clear.in  rb_count.in  rb_init.in  rb_read.in  rb_set_hard_max_count.in  rb_write.in  ref-list.in
www/manuals/: index.rst
www/manuals/base/: index.rst  rb_destroy.3.rst  rb_new.3.rst  rb_read.3.rst  rb_write.3.rst
www/manuals/claim/: index.rst  rb_read_claim.3.rst  rb_read_commit.3.rst  rb_read_commit_claim.3.rst  rb_write_claim.3.rst  rb_write_commit.3.rst  rb_write_commit_claim.3.rst
www/manuals/control/: index.rst  rb_clear.3.rst  rb_count.3.rst  rb_discard.3.rst  rb_peek_size.3.rst  rb_set_hard_max_count.3.rst  rb_space.3.rst  rb_stop.3.rst
www/manuals/ext/: index.rst  rb_cleanup.3.rst  rb_init.3.rst  rb_readv.3.rst  rb_recv.3.rst  rb_recv_claim.3.rst  rb_recv_commit.3.rst  rb_recv_commit_claim.3.rst  rb_recvv.3.rst  rb_send.3.rst  rb_send_claim.3.rst  rb_send_commit.3.rst  rb_send_commit_claim.3.rst  rb_sendv.3.rst  rb_writev.3.rst
