man_MANS = man3/rb_clear.3 \
		   man3/rb_count.3 \
		   man3/rb_destroy.3 \
		   man3/rb_new.3 \
		   man7/rb_overview.7 \
		   man3/rb_read.3 \
		   man3/rb_recv.3 \
		   man3/rb_send.3 \
		   man3/rb_space.3 \
		   man3/rb_version.3 \
		   man3/rb_write.3 \
		   man3/rb_stop.3
EXTRA_DIST = $(man_MANS)
